--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
   
   form button {
     padding: 10px;
-    background: #4caf50;
+    background: rgb(54, 54, 145);
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -78,7 +78,7 @@
   }
   
   .user-card button.edit {
-    background: #3e9ce9;
+    background: yellowgreen;
   }
   
   .user-card button:hover {
